--- a/App/build.gradle
+++ b/App/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "android.serialport.sample"
+        applicationId "com.bit.robotsdkapp"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -20,6 +20,13 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            java.srcDir "build/generated/source/greendao"
+            jniLibs.srcDirs = ['src/main/jniLibs', 'src/main/jniLibs/imsdk', 'src/main/jniLibs/robotsdk']
+        }
+    }
+
 //    repositories {
 //        flatDir {
 //            dirs 'libs'
@@ -28,14 +35,21 @@ android {
 }
 
 dependencies {
-//    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-//    compile project(':serialport')
+
+    //    compile project(':serialport')
+
     compile project(':RobotLib')
-//    compile(name: 'RobotLib-release', ext: 'aar')
+
+    compile files('libs/nim-basesdk-4.7.3.jar')
+    compile files('libs/nim-chatroom-4.7.3.jar')
+
+//    compile files('libs/robotlib.jar')
+//    compile files('libs/serialport.jar')
 }
