--- a/App/build.gradle
+++ b/App/build.gradle
@@ -27,6 +27,19 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
 //    repositories {
 //        flatDir {
 //            dirs 'libs'
@@ -40,16 +53,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'org.xutils:xutils:3.3.42'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
     //    compile project(':serialport')
-
-//    compile project(':RobotLib')
-
+    //    compile project(':RobotLib')
     compile files('libs/nim-basesdk-4.7.3.jar')
     compile files('libs/nim-chatroom-4.7.3.jar')
-
     compile files('libs/robotlib.jar')
     compile files('libs/serialport.jar')
 }
