--- a/App/build.gradle
+++ b/App/build.gradle
@@ -60,9 +60,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     //    compile project(':serialport')
-    //    compile project(':RobotLib')
+    compile project(':RobotLib')
     compile files('libs/nim-basesdk-4.7.3.jar')
     compile files('libs/nim-chatroom-4.7.3.jar')
-    compile files('libs/robotlib.jar')
-    compile files('libs/serialport.jar')
+//    compile files('libs/robotlib.jar')
+//    compile files('libs/serialport.jar')
 }
