--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':SerialPort', ':SerialportBin', ':App', ':RobotLib'
+include ':SerialPort', ':SerialportBin', ':App', ':RobotLib', ':IMRobotLib'
