--- a/App/src/main/AndroidManifest.xml
+++ b/App/src/main/AndroidManifest.xml
@@ -137,15 +137,15 @@
         <activity android:name=".ConsoleActivity"></activity>
         <activity android:name=".LoopbackActivity"></activity>
         <activity android:name=".Sending01010101Activity"></activity>
-        <!--<activity android:name=".ControlActivity2"></activity>-->
-        <activity android:name=".ControlActivity2"
+        <activity android:name=".ControlActivity2"></activity>
+        <activity android:name=".ControlActivity"
                   android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-                <!--<category android:name="android.intent.category.HOME"/>-->
+                <category android:name="android.intent.category.HOME"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <!--<category android:name="android.intent.category.MONKEY"/>-->
+                <category android:name="android.intent.category.MONKEY"/>
             </intent-filter>
             <!--<intent-filter>-->
             <!--<action android:name="android.intent.action.MAIN"/>-->
