--- a/IMRobotLib/src/main/AndroidManifest.xml
+++ b/IMRobotLib/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest package="com.bit.imrobotlib"
-          xmlns:android="http://schemas.android.com/apk/res/android"/>
+          xmlns:android="http://schemas.android.com/apk/res/android">
+    <application android:allowBackup="true" android:label="@string/app_name"
+                 android:supportsRtl="true">
+
+    </application>
+</manifest>
