--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':SerialPort', ':SerialportBin', ':App', ':RobotLib', ':IMRobotLib'
+include ':SerialPort'
+include ':SerialportBin'
+include ':App'
+include ':RobotLib'
+include ':IMRobotLib'
